# Election

./: CMakeLists.txt  Candidate.cpp  Candidate.h  CandidateState.h  Date.cpp  Date.h  DateTime.cpp  DateTime.h  Ministry.cpp  Ministry.h  Person.cpp  Person.h  Time.cpp  Time.h  Vote.cpp  Vote.h  VoteBranch.cpp  VoteBranch.h  VoteKiosk.cpp  VoteKiosk.h  main.cpp
